--- a/.gitignore
+++ b/.gitignore
@@ -322,3 +322,36 @@ docs/build/
 ehthumbs.db
 Thumbs.db 
 
+# Node.js dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# React build outputs
+frontend/build/
+frontend/dist/
+
+# React environment files
+frontend/.env
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
+# React cache
+frontend/.cache/
+frontend/.parcel-cache/
+
+# React testing
+frontend/coverage/
+frontend/.nyc_output/
+
+# React IDE files
+frontend/.idea/
+frontend/.vscode/
+frontend/*.swp
+frontend/*.swo
+
