--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,83 +1,6 @@
-altair==5.5.0
-anyio==4.9.0
-attrs==25.3.0
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.7.14
-charset-normalizer==3.4.2
-click==8.2.1
-colorama==0.4.6
-fastapi==0.116.1
-filelock==3.18.0
-fsspec==2025.7.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-api-core==2.25.1
-google-api-python-client==2.176.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.2
-googleapis-common-protos==1.70.0
-h11==0.16.0
-httplib2==0.22.0
-httptools==0.6.4
-huggingface-hub==0.33.4
-idna==3.10
-iniconfig==2.1.0
-Jinja2==3.1.6
-jsonschema==4.25.0
-jsonschema-specifications==2025.4.1
-MarkupSafe==3.0.2
-mpmath==1.3.0
-narwhals==1.47.1
-networkx==3.5
-numpy==2.3.1
-oauthlib==3.3.1
-packaging==25.0
-pandas==2.3.1
-pillow==11.3.0
-pluggy==1.6.0
-proto-plus==1.26.1
-protobuf==6.31.1
-pyarrow==21.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydantic==1.10.22
-pydeck==0.9.1
-Pygments==2.19.2
-pyparsing==3.2.3
-pytest==8.4.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.2
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.4
-requests-oauthlib==2.0.0
-rpds-py==0.26.0
-rsa==4.9.1
-safetensors==0.5.3
-setuptools==80.9.0
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-starlette==0.47.1
-streamlit==1.47.0
-sympy==1.14.0
-tenacity==9.1.2
-tokenizers==0.21.2
-toml==0.10.2
-torch==2.7.1
-tornado==6.5.1
-tqdm==4.67.1
-transformers==4.53.2
-typing_extensions==4.14.1
-tzdata==2025.2
-uritemplate==4.2.0
-urllib3==2.5.0
-uvicorn==0.35.0
-watchdog==6.0.0
-watchfiles==1.1.0
-websockets==15.0.1
+fastapi
+uvicorn[standard]
+transformers
+torch
+requests
+pydantic
